--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">kbbbc_20211227</string>
+    <string name="app_name">큰빛성서침례교회</string>
     <string name="BANNER_NUM">3</string>
 </resources>
